--- a/Box Task Manager.csproj
+++ b/Box Task Manager.csproj
@@ -119,6 +119,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Authorize.xaml.cs">
+      <DependentUpon>Authorize.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DocumentView.xaml.cs">
       <DependentUpon>DocumentView.xaml</DependentUpon>
     </Compile>
@@ -126,8 +129,10 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\APIConfiguration.cs" />
     <Compile Include="View\Base.cs" />
     <Compile Include="View\Command.cs" />
+    <Compile Include="View\IAPIConfiguration.cs" />
     <Compile Include="View\Locator.cs" />
     <Compile Include="View\Main.cs" />
     <Compile Include="View\TaskEntries\ApprovalTaskEntry.cs" />
@@ -154,6 +159,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Authorize.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="DocumentView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -185,6 +194,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NonZeroValueConverter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="API.resw" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
