--- a/Box Task Manager.csproj
+++ b/Box Task Manager.csproj
@@ -128,6 +128,7 @@
     <Compile Include="DocumentView.xaml.cs">
       <DependentUpon>DocumentView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="IsSingularValueConverter.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -141,8 +142,6 @@
     <Compile Include="View\IAPIConfiguration.cs" />
     <Compile Include="View\Locator.cs" />
     <Compile Include="View\Main.cs" />
-    <Compile Include="View\TaskEntries\ApprovalTaskEntry.cs" />
-    <Compile Include="View\TaskEntries\SimpleTaskEntry.cs" />
     <Compile Include="View\TaskEntry.cs" />
   </ItemGroup>
   <ItemGroup>
