--- a/Box Task Manager.csproj
+++ b/Box Task Manager.csproj
@@ -134,20 +134,26 @@
     <Compile Include="DocumentView.xaml.cs">
       <DependentUpon>DocumentView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="HideIfNullConverter.cs" />
+    <Compile Include="OauthDialog.xaml.cs">
+      <DependentUpon>OauthDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ShowIfEmptyConverter.cs" />
+    <Compile Include="HideIfEmptyConverter.cs" />
+    <Compile Include="ShowIfZeroConverter.cs" />
+    <Compile Include="HideIfZero.cs" />
     <Compile Include="IsSingularValueConverter.cs" />
     <Compile Include="LastItem.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Toaster.cs" />
     <Compile Include="View\APIConfiguration.cs" />
     <Compile Include="View\Assignment.cs" />
     <Compile Include="View\Assignments\Complete.cs" />
     <Compile Include="View\Assignments\Review.cs" />
     <Compile Include="View\Base.cs" />
     <Compile Include="View\Command.cs" />
+    <Compile Include="View\EntryToast.cs" />
     <Compile Include="View\IAPIConfiguration.cs" />
     <Compile Include="View\Locator.cs" />
     <Compile Include="View\Main.cs" />
@@ -196,6 +202,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="OauthDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
