--- a/Box Task Manager.csproj
+++ b/Box Task Manager.csproj
@@ -226,6 +226,7 @@
     <PRIResource Include="API.resw" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="box task manager setup.cmd" />
     <None Include="Box Task Manager_TemporaryKey.pfx" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
